changed to flow

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
      <div class="logo"> <aria-label="Logo">RC</div>
             <button class="burger" aria-label="Open menu" aria-controls="mobile-nav" aria-expanded="false"><span class="bars"></span></button>
     </div>
+
     <nav id="mobile-nav" class="mobile-nav" aria-label="Mobile">
       <ul class="nav-list">
-        <li><a href="index.html" aria-current="page">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="signup.html">Sign‑up</a></li>
-        <li><a href="contacts.html">Contacts</a></li>
+        <li><a href=#home aria-current="page">Home</a></li>
+        <li><a href=#about>About</a></li>
+        <li><a href=#services>Services</a></li>
+        <li><a href=#portfolio>Portfolio</a></li>
+        <li><a href=#signup>Sign‑up</a></li>
+        <li><a href=#contacts>Contacts</a></li>
       </ul>
     </nav>
   </header>
   <main class="page">
     <div class="container">
-  <section>
+
+  <section id="home">
     <h1>Custom Web Design Services</h1>
   </section>
   <section class="stack">
@@ -42,11 +44,127 @@
       <div class="chip pink">SEO & Performance</div>
     </div>
   </section>
+
+<section class="stack">
+    <div class="card">
+      <h2>Hi, I'm Mila Petruk - Freelance Web Designer & Developer</h2>
+      <p class="lead">With over <span style="color: var(--blue)">3 years of experience</span> in website design and development, I create clean and modern websites tailored to your brand.</p>
+    </div>
+    <div class="card">
+      <ul style="margin:0;padding-left:18px;color:var(--blue);">
+        <li class="expertise">Custom-coded websites using <span style="color: var(--blue)">HTML, CSS, and JavaScript</span></li>
+        <li class="expertise"><span style="color: var(--blue)">Webflow development</span> for dynamic, no-code solutions</li>
+        <li class="expertise">UI/UX design with <span style="color: var(--blue)">Adobe Design Tools</span></li>
+        <li class="expertise"><span style="color: var(--blue)">SEO-optimized</span> and <span style="color: var(--blue)">responsive</span> web performance</li>
+      </ul>
+    </div>
+    <div class="card">
+     <h2 class="smaller">Every project is tailored to your brand's unique needs. Let's create something impactful together!</h2>
+    </div>
+  </section>
+
+<section class="stack">
+    <div class="pill pink">
+      <h3>Custom Design</h3>
+      <p class="lead">I design visually compelling and strategically built websites that enhance your brand's online presence</p>
+    </div>
+    <div class="pill blue">
+      <h3>Web Development</h3>
+      <p class="lead">From static pages to dynamic interactions, I build clean, responsive, and fast-loading websites with custom code</p>
+    </div>
+    <div class="pill pink">
+      <h3>Webflow Development</h3>
+      <p class="lead">Need a powerful website without complex coding? I design seamless, scalable sites on Webflow</p>
+    </div>
+    <div class="pill blue">
+      <h3>SEO & Performance</h3>
+      <p class="lead">A fast, well-structured website ranks better and converts more visitors. Let's ensure your website performs at its best</p>
+    </div>
+    <div class="pill pink">
+      <h3>UI/UX Design</h3>
+      <p class="lead">I create user-friendly interfaces with Adobe Design Tools, ensuring a smooth and engaging experience</p>
+    </div>
+  </section>
+
+  <section class="stack">
+    <div class="list">
+      <div class="list-item">
+        <div class="thumb">
+        </div>
+      <div>
+        <strong>Tour Center Brandbook Kit</strong>
+        <div class="lead">webpage logo, stylization, icons, tied to brand philosophy</div>
+      </div>
+      </div>
+      <div class="list-item">
+        <div class="thumb">
+        </div>
+        <div>
+          <strong>Ice Cream Website</strong>
+          <div class="lead">website development with HTML and CSS, team project</div>
+        </div>
+      </div>
+      <div class="list-item">
+        <div class="thumb">
+        </div>
+        <div>
+          <strong>Filmoteka Website</strong>
+          <div class="lead">website development with HTML, CSS, and JavaScript, team project</div>
+        </div>
+      </div>
+      <div class="list-item">
+        <div class="thumb">
+        </div>
+        <div>
+          <strong>Hotel Guest Info App</strong>
+          <div class="lead">design, creation, testing, launching an application with hotel info for guests</div>
+        </div>
+      </div>
+      <div class="list-item">
+        <div class="thumb">
+        </div>
+        <div>
+          <strong>Phonebook App</strong>
+          <div class="lead">creating an application with React, Redux, Hooks, team lead role</div>
+        </div>
+      </div>
+    </div>
+    <section>
+      <h2 class="smaller">Project samples highlight my approach to design and development</h2>
+    </section>
+  </section>
+
+  <section class="stack">
+    <h2 class="bigger">Let’s discuss how to bring your vision to life</h2>
+    <div class="card">
+      <div class="stack">
+        <input class="input" placeholder="Your name">
+        <input class="input" placeholder="Your email">
+        <textarea class="input" placeholder="Your text" rows="5"></textarea>
+        <button class="btn" type="button">SEND</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="stack">
+    <h2>Let’s create something amazing!</h2>
+    <div class="card">
+      <p class="contactme">Have a project in mind? Whether you need a custom-coded site, a Webflow project, or a fresh design, I'm here to help.</p>
+      <div class="stack">
+        <div>✉️ &nbsp; mila.petruk@gmail.com</div>
+        <div>📞 &nbsp; +34 610 988 976</div>
+        <div>📍 &nbsp; Mallorca, Spain</div>
+      </div>
+    </div>
+  </section>
+
     </div>
   </main>
   <footer class="mobile">
     <div class="container">Mallorca, Spain · mila.petruk@gmail.com · +34 610 988 976</div>
   </footer>
   <script src="js/main.js"></script>
+  <script src="js/other.js"></script>
 </body>
+
 </html>
