changed card color

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div class="row">
       <div class="chip pink">Custom Design</div>
       <div class="chip cyan">Web Development</div>
-      <div class="chip cyan">UI/UX Design</div>
+      <div class="chip pink">UI/UX Design</div>
       <div class="chip pink">Webflow Development</div>
-      <div class="chip pink">SEO & Performance</div>
+      <div class="chip cyan">SEO & Performance</div>
     </div>
   </section>
 
