--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
     </div>
     <section>
-      <h2 class="smaller">Project samples highlight my approach to design and development</h2>
+      <h2>Project samples highlight my approach to design and development</h2>
     </section>
   </section>
 
