deleted sign-up section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     </section>
   </section>
 
+  <!--
   <section class="stack">
     <h2 class="bigger">Let’s discuss how to bring your vision to life</h2>
     <div class="card">
@@ -145,11 +146,20 @@
       </div>
     </div>
   </section>
-
+  -->
+ 
   <section class="stack">
     <h2>Let’s create something amazing!</h2>
     <div class="card">
       <p class="contactme">Have a project in mind? Whether you need a custom-coded site, a Webflow project, or a fresh design, I'm here to help.</p>
+      <div class="card">
+      <div class="stack">
+        <input class="input" placeholder="Your name">
+        <input class="input" placeholder="Your email">
+        <textarea class="input" placeholder="Your text" rows="5"></textarea>
+        <button class="btn" type="button">SEND</button>
+      </div>
+    </div>
       <div class="stack">
         <div>✉️ &nbsp; mila.petruk@gmail.com</div>
         <div>📞 &nbsp; +34 610 988 976</div>
