deleted h2 from contacts

--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
   -->
  
   <section class="stack">
-    <h2>Let’s create something amazing!</h2>
     <div class="card">
-      <p class="contactme">Have a project in mind? Whether you need a custom-coded site, a Webflow project, or a fresh design, I'm here to help.</p>
+      <p class="contactme">Have a project in mind? Let’s create something amazing!</p>
       <div class="card">
       <div class="stack">
         <input class="input" placeholder="Your name">
