deleted ugly pictures

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
       </div>
     </div>
       <div class="stack">
-        <div>✉️ &nbsp; mila.petruk@gmail.com</div>
-        <div>📞 &nbsp; +34 610 988 976</div>
-        <div>📍 &nbsp; Mallorca, Spain</div>
+        <div>mila.petruk@gmail.com</div>
+        <div>+34 610 988 976</div>
+        <div>Mallorca, Spain</div>
       </div>
     </div>
   </section>
