style padding added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p class="lead">With over <span style="color: var(--blue)">3 years of experience</span> in website design and development, I create clean and modern websites tailored to your brand.</p>
     </div>
     <div class="card">
-      <ul style="margin:0;padding-left:18px;color:var(--blue);">
+      <ul style="margin:10px;padding-left:18px;color:var(--blue);">
         <li class="expertise">Custom-coded websites using <span style="color: var(--blue)">HTML, CSS, and JavaScript</span></li>
         <li class="expertise"><span style="color: var(--blue)">Webflow development</span> for dynamic, no-code solutions</li>
         <li class="expertise">UI/UX design with <span style="color: var(--blue)">Adobe Design Tools</span></li>
