--- a/index.html
+++ b/index.html
@@ -159,18 +159,20 @@
         <button class="btn" type="button">SEND</button>
       </div>
     </div>
-      <div class="stack">
+    <!--
+    <div class="stack">
         <div>mila.petruk@gmail.com</div>
         <div>+34 610 988 976</div>
         <div>Mallorca, Spain</div>
       </div>
+    -->  
     </div>
   </section>
 
     </div>
   </main>
   <footer class="mobile">
-    <div class="container">Mallorca, Spain · mila.petruk@gmail.com · +34 610 988 976</div>
+    <div class="container">mila.petruk@gmail.com · +34 610 988 976</div>
   </footer>
   <script src="js/main.js"></script>
   <script src="js/other.js"></script>
