--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <section class="stack">
     <div class="list">
       <div class="list-item">
-        <div class="thumb">
+        <div class="thumb" style="background-image: url('img/P01.png');">
         </div>
       <div>
         <strong>Tour Center Brandbook Kit</strong>
@@ -97,7 +97,7 @@
       </div>
       </div>
       <div class="list-item">
-        <div class="thumb">
+        <div class="thumb" style="background-image: url('img/P02.png');">
         </div>
         <div>
           <strong>Ice Cream Website</strong>
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="list-item">
-        <div class="thumb">
+        <div class="thumb" style="background-image: url('img/P03.png');">
         </div>
         <div>
           <strong>Filmoteka Website</strong>
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="list-item">
-        <div class="thumb">
+        <div class="thumb" style="background-image: url('img/P04.png');">
         </div>
         <div>
           <strong>Hotel Guest Info App</strong>
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div class="list-item">
-        <div class="thumb">
+        <div class="thumb" style="background-image: url('img/P05.png');">
         </div>
         <div>
           <strong>Phonebook App</strong>
