--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <li><a href=#about>About</a></li>
         <li><a href=#services>Services</a></li>
         <li><a href=#portfolio>Portfolio</a></li>
-        <li><a href=#signup>Sign‑up</a></li>
-        <li><a href=#contacts>Contacts</a></li>
+        <li><a href=#contacts>Contact Form</a></li>
       </ul>
     </nav>
   </header>
