changed phone and email

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
   </main>
   <footer class="mobile">
-    <div class="container">mila.petruk@gmail.com · +34 610 988 976</div>
+    <div class="container">+34 610 988 976 mila.petruk@gmail.com</div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script src="js/main.js"></script>
