changed to a instead of div

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
   <section class="stack">
     <div class="list">
-      <div class="list-item">
+      <a href="https://acrobat.adobe.com/id/urn:aaid:sc:EU:5bfc68d5-0f6d-4c6f-883b-2fd5485567cc" class="list-item">
         <div class="thumb" style="background-image: url('img/P01.png');">
         </div>
       <div>
         <strong>Tour Center Brandbook Kit</strong>
         <div class="lead">webpage logo, stylization, icons, tied to brand philosophy</div>
       </div>
-      </div>
+      </a>
       <div class="list-item">
         <div class="thumb" style="background-image: url('img/P02.png');">
         </div>
