two classes adding card

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </section>
 
   <section class="stack">
-    <div class="list">
+    <div class="card" class="list">
       <a href="https://acrobat.adobe.com/id/urn:aaid:sc:EU:5bfc68d5-0f6d-4c6f-883b-2fd5485567cc" class="list-item">
         <div class="thumb" style="background-image: url('img/P01.png');">
         </div>
