changes to menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="mobile">
     <div class="container topbar">
-     <div class="logo"> <aria-label="Logo">RC</div>
+     <div class="logo" aria-label="Logo">RC</div>
             <button class="burger" aria-label="Open menu" aria-controls="mobile-nav" aria-expanded="false"><span class="bars"></span></button>
     </div>
 
@@ -44,7 +44,7 @@
     </div>
   </section>
 
-<section class="stack">
+<section id="about" class="stack">
     <div class="card">
       <h2>Hi, I'm Mila Petruk - Freelance Web Designer & Developer</h2>
       <p class="lead">With over <span style="color: var(--blue)">3 years of experience</span> in website design and development, I create clean and modern websites tailored to your brand.</p>
@@ -62,7 +62,7 @@
     </div>
   </section>
 
-<section class="stack">
+<section id="services" class="stack">
     <div class="pill pink">
       <h3>Custom Design</h3>
       <p class="lead">I design visually compelling and strategically built websites that enhance your brand's online presence</p>
@@ -85,8 +85,8 @@
     </div>
   </section>
 
-  <section class="stack">
-    <div class="card" class="list">
+  <section id="portfolio" class="stack">
+    <div class="list">
       <a href="https://acrobat.adobe.com/id/urn:aaid:sc:EU:5bfc68d5-0f6d-4c6f-883b-2fd5485567cc" class="list-item">
         <div class="thumb" style="background-image: url('img/P01.png');">
         </div>
@@ -95,45 +95,45 @@
         <div class="lead">webpage logo, stylization, icons, tied to brand philosophy</div>
       </div>
       </a>
-      <div class="list-item">
+      <a href="https://himadieiev.github.io/ice-cream-new/" class="list-item">
         <div class="thumb" style="background-image: url('img/P02.png');">
         </div>
         <div>
           <strong>Ice Cream Website</strong>
           <div class="lead">website development with HTML and CSS, team project</div>
         </div>
-      </div>
-      <div class="list-item">
+      </a>
+      <a href="https://etopritika.github.io/team-project-12/" class="list-item">
         <div class="thumb" style="background-image: url('img/P03.png');">
         </div>
         <div>
           <strong>Filmoteka Website</strong>
           <div class="lead">website development with HTML, CSS, and JavaScript, team project</div>
         </div>
-      </div>
-      <div class="list-item">
+      </a>
+      <a href="https://xd.adobe.com/view/62cebc18-c77c-4938-8bb4-5e66d33d45a3-379d/?fullscreen" class="list-item">
         <div class="thumb" style="background-image: url('img/P04.png');">
         </div>
         <div>
           <strong>Hotel Guest Info App</strong>
           <div class="lead">design, creation, testing, launching an application with hotel info for guests</div>
         </div>
-      </div>
-      <div class="list-item">
+      </a>
+      <a href="https://milka4eva.github.io/goit-react-hw-08-phonebook/" class="list-item">
         <div class="thumb" style="background-image: url('img/P05.png');">
         </div>
         <div>
           <strong>Phonebook App</strong>
           <div class="lead">creating an application with React, Redux, Hooks, team lead role</div>
         </div>
-      </div>
+      </a>
     </div>
     <section>
       <h2>Project samples highlight my approach to design and development</h2>
     </section>
   </section>
 
-  <section class="stack">
+  <section id="contacts" class="stack">
     <div class="card">
       <p class="contactme">Have a project in mind? Let’s create something amazing!</p>
       <div class="card">
