corrected html and css throughout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav id="mobile-nav" class="mobile-nav" aria-label="Mobile">
       <ul class="nav-list">
-        <li><a href=#home aria-current="page">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href=#about>About</a></li>
         <li><a href=#services>Services</a></li>
         <li><a href=#portfolio>Portfolio</a></li>
